[package]
name = "cli-logger"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
lazy_static = { workspace = true }
colored = "2.0"

[lints]
workspace = true
