[package]
name = "file-paths"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
camino = { workspace = true }
fs-err = "2.9.0"
path-clean = "1.0.1"
serde = { workspace = true }
thiserror = { workspace = true }
wax = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
