[package]
name = "package-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
walkdir = "2.3.3"
anyhow = "1.0"

[lib]
name = "pnpm_package_creator"
path = "src/lib.rs"

[lints]
workspace = true
