[package]
name = "package-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
walkdir = "2.3.3"
anyhow = "1.0"

[lib]
name = "package_cli"
path = "src/lib.rs"

[[bin]]
name = "package_cli"
path = "src/main.rs"

[lints]
workspace = true
