[package]
name = "package-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = "2.3.3"
anyhow = "1.0"
thiserror = { workspace = true }

[lib]
name = "package_cli"
path = "src/lib.rs"

[[bin]]
name = "package_cli"
path = "src/main.rs"

[lints]
workspace = true
